@@ -1,19 +1,19 @@
 package com.typingpractice.typing_practice_be.common.jwt;
 
+import com.typingpractice.typing_practice_be.member.domain.MemberRole;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import java.io.IOException;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.lang.NonNull;
-import org.springframework.lang.NonNullApi;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-
-import java.io.IOException;
-import java.util.Collections;
 
 @Component
 @RequiredArgsConstructor
@@ -38,13 +38,27 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     String token = resolveToken(request);
 
     if (token != null && jwtTokenProvider.validateToken(token)) {
-      Long memberId = jwtTokenProvider.getMemberId(token);
+      try {
+        Long memberId = jwtTokenProvider.getMemberId(token);
+        String role = jwtTokenProvider.getRole(token);
+        MemberRole memberRole = MemberRole.valueOf(role);
 
-      UsernamePasswordAuthenticationToken authentication =
-          new UsernamePasswordAuthenticationToken(memberId, null, Collections.emptyList());
+        if (memberRole == MemberRole.BANNED) {
+          SecurityContextHolder.clearContext();
+        } else {
+          List<SimpleGrantedAuthority> authorities =
+              List.of(new SimpleGrantedAuthority(memberRole.getAuthority()));
 
-      // 인증된 내용을 SecurityContext 에 넣어서 컨트롤러에서 사용할 수 있게 함.
-      SecurityContextHolder.getContext().setAuthentication(authentication);
+          UsernamePasswordAuthenticationToken authentication =
+              new UsernamePasswordAuthenticationToken(memberId, null, authorities);
+
+          // 인증된 내용을 SecurityContext 에 넣어서 컨트롤러에서 사용할 수 있게 함.
+          SecurityContextHolder.getContext().setAuthentication(authentication);
+        }
+
+      } catch (Exception e) {
+        SecurityContextHolder.clearContext();
+      }
     }
 
     filterChain.doFilter(request, response);
